; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_matrix.c_gdAffineShearHorizontal.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_matrix.c_gdAffineShearHorizontal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@M_PI = common dso_local global double 0.000000e+00, align 8
@GD_TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gdAffineShearHorizontal(double* %0, double %1) #0 {
  %3 = alloca double*, align 8
  %4 = alloca double, align 8
  store double* %0, double** %3, align 8
  store double %1, double* %4, align 8
  %5 = load double*, double** %3, align 8
  %6 = getelementptr inbounds double, double* %5, i64 0
  store double 1.000000e+00, double* %6, align 8
  %7 = load double*, double** %3, align 8
  %8 = getelementptr inbounds double, double* %7, i64 1
  store double 0.000000e+00, double* %8, align 8
  %9 = load double, double* %4, align 8
  %10 = load double, double* @M_PI, align 8
  %11 = fmul double %9, %10
  %12 = fdiv double %11, 1.800000e+02
  %13 = call double @tan(double %12) #2
  %14 = load double*, double** %3, align 8
  %15 = getelementptr inbounds double, double* %14, i64 2
  store double %13, double* %15, align 8
  %16 = load double*, double** %3, align 8
  %17 = getelementptr inbounds double, double* %16, i64 3
  store double 1.000000e+00, double* %17, align 8
  %18 = load double*, double** %3, align 8
  %19 = getelementptr inbounds double, double* %18, i64 4
  store double 0.000000e+00, double* %19, align 8
  %20 = load double*, double** %3, align 8
  %21 = getelementptr inbounds double, double* %20, i64 5
  store double 0.000000e+00, double* %21, align 8
  %22 = load i32, i32* @GD_TRUE, align 4
  ret i32 %22
}

; Function Attrs: nounwind
declare dso_local double @tan(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
